Add Images folder, update activities, finish lesson plan

--- a/Activities/02-Stu_Superheroes_SQL/Unsolved/superheroes_in_sql.ipynb
+++ b/Activities/02-Stu_Superheroes_SQL/Unsolved/superheroes_in_sql.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "dataframes_and_sql.ipynb",
+      "name": "unsolved_superheroes_in_sql.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -60,8 +60,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q2fg5gtM1XO8",
-        "cellView": "both"
+        "id": "q2fg5gtM1XO8"
       },
       "source": [
         "# Create a local Spark session\n",
@@ -88,9 +87,7 @@
         "id": "n8_1OKZa2zvW"
       },
       "source": [
-        "# Upload the \"heroes_information.csv\" file\n",
-        "from google.colab import files\n",
-        "files.upload()"
+        "# Upload heroes_information.csv and super_hero_powers.csv files\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -101,13 +98,7 @@
         "id": "D9jRA8FP3HSA"
       },
       "source": [
-        "# Import data from the CSV file into a DataFrame\n",
-        "heroes = spark.read.load(\n",
-        "    \"heroes_information.csv\",\n",
-        "    format=\"csv\",\n",
-        "    inferSchema=\"true\",\n",
-        "    header=\"true\"\n",
-        ")"
+        "# Import data from both CSV files into DataFrames\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -118,8 +109,7 @@
         "id": "yAJUYxzWix6p"
       },
       "source": [
-        "# Create a view from the DataFrame so that we can query our data in SQL\n",
-        "heroes.createOrReplaceTempView(\"heroes\")"
+        "# Create views from the DataFrames so that we can query our data in SQL\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -130,25 +120,16 @@
         "id": "5EoqLRHih2kg"
       },
       "source": [
-        "## Compare DataFrame API to SQL API\n",
-        "Here we fetch the same results using the DataFrame API and the SQL API"
+        "## Write SQL queries"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JbA5WuFp3HVA"
+        "id": "0UzatW_rwEAB"
       },
       "source": [
-        "sqlWay = spark.sql(\"\"\"\n",
-        "SELECT `hair color` AS hair_color, count(1)\n",
-        "FROM heroes\n",
-        "GROUP BY hair_color\n",
-        "ORDER BY count(1) DESC\n",
-        "LIMIT 10\n",
-        "\"\"\")\n",
-        "# Note that even though we are using Spark SQL, the result returned is still a DataFrame\n",
-        "sqlWay.show()"
+        "# Write a SQL query to return the name, eye color, and alignment of heroes that have an alignment of 'bad' or 'neutral' and the power of invisibility\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -156,18 +137,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O7E3IuvkkEcL"
+        "id": "VChfZoSawECT"
       },
       "source": [
-        "from pyspark.sql.functions import col\n",
-        "\n",
-        "dataFrameWay = heroes \\\n",
-        "  .groupBy(\"hair color\") \\\n",
-        "  .count() \\\n",
-        "  .orderBy(col(\"count\").desc()) \\\n",
-        "  .limit(10)\n",
-        "\n",
-        "dataFrameWay.show()"
+        "# Write a SQL query to return the top ten publishers by count of female heroes with the power of super strength\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -175,12 +148,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6LWsZzFWkEre"
+        "id": "mLr3uAU0wEGH"
       },
       "source": [
-        "# Compare the physical plans of each approach\n",
-        "sqlWay.explain()\n",
-        "dataFrameWay.explain()"
+        "# Write a SQL query to return all of the heroes that exist in the heroes table but not the superpowers table\n"
       ],
       "execution_count": null,
       "outputs": []
